fixing wrong padding in blockquote

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -173,6 +173,9 @@ blockquote {
 .notice, .notice--primary, .notice--info, .notice--warning, .notice--success, .notice--danger {
   font-size: 0.9em !important; // overriding the 0.75em default for all notices
 }
+.adjust-notice-margins p {
+  margin-top: 0 !important; 
+}
 
 /* Adjusting links */
 a.current {
